# EM_research-MATS_application

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: project_config.yaml
data/: combined_data.txt  financial_risk.txt  moral_foundations.txt  political_compass.txt  technology_ai.txt  testing_questions.txt
src/notebooks/: probing_hooks_and_how_they_work.ipynb  results_testing.ipynb  testing_orca_dataset.ipynb  testing_transformerlens.ipynb  understanding_clustering_data.py.ipynb
src/notebooks/colab/: MATS_copy_of_Qwen_Fine_Tune_misalignment_LoRA_full.ipynb
src/notebooks/runpod/: testing_transformerlens_runpod.ipynb
src/pipelines/: testing_if_model_loaded.py  trying_steering.py
src/pod/: config.py  persona_data_runner.py  test_connection.py
src/schemas/: config_schema.py
src/scripts/: judging_em_responses.py  judging_em_responses_neutral_data.py  lens_full_model.py  pca_reduction_and_clustering.py  persona_collector.py  steering_full.py
src/scripts/generating_dataset/: generate_abstract.py  generating_pipeline.py  subdataset_classes.py
src/tests/: trying_to_load_dataset.py
src/utils/: adding_subset_to_dataframe.py  download_models.py  getting_subpersona_steering.py  load_config.py  prompts.py  qwen3_em_hf_model.py
src/visualizations/: clusters_visualizations.py  em_response_rate.py
