[project]
name = "emergent-misalignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.10.1",
  "datasets>=4.0.0",
  "dotenv>=0.9.9",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.7",
  "litellm>=1.76.0",
  "loguru>=0.7.3",
  "matplotlib>=3.10.5",
  "notebook>=7.4.5",
  "paramiko>=4.0.0",
  "pathlib>=1.0.1",
  "pip>=25.2",
  "pre-commit>=4.3.0",
  "pydantic>=2.11.7",
  "ruff>=0.12.10",
  "runpod>=1.7.13",
  "scikit-learn>=1.7.1",
  "seaborn>=0.13.2",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "transformer-lens>=2.16.1",
  "transformers>=4.55.4",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }


#[build-system]
#requires = ["setuptools>=70", "setuptools-scm>=7"]
#build-backend = "setuptools.build_meta"
